--- a/kaggle/PGS5/PGS5_ep4/2.Feature Engineering.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/2.Feature Engineering.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n"
+      "3.12.9 (main, Mar 15 2025, 13:36:28) [GCC 13.3.0]\n"
      ]
     }
    ],
@@ -43,7 +43,8 @@
       "text/html": [
        "<style>#sk-container-id-1 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
-       "  --sklearn-color-text: black;\n",
+       "  --sklearn-color-text: #000;\n",
+       "  --sklearn-color-text-muted: #666;\n",
        "  --sklearn-color-line: gray;\n",
        "  /* Definition of color scheme for unfitted estimators */\n",
        "  --sklearn-color-unfitted-level-0: #fff5e6;\n",
@@ -188,12 +189,21 @@
        "/* Toggleable label */\n",
        "#sk-container-id-1 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
-       "  display: block;\n",
+       "  display: flex;\n",
        "  width: 100%;\n",
        "  margin-bottom: 0;\n",
        "  padding: 0.5em;\n",
        "  box-sizing: border-box;\n",
        "  text-align: center;\n",
+       "  align-items: start;\n",
+       "  justify-content: space-between;\n",
+       "  gap: 0.5em;\n",
+       "}\n",
+       "\n",
+       "#sk-container-id-1 label.sk-toggleable__label .caption {\n",
+       "  font-size: 0.6rem;\n",
+       "  font-weight: lighter;\n",
+       "  color: var(--sklearn-color-text-muted);\n",
        "}\n",
        "\n",
        "#sk-container-id-1 label.sk-toggleable__label-arrow:before {\n",
@@ -346,7 +356,8 @@
        "  height: 1em;\n",
        "  width: 1em;\n",
        "  text-decoration: none !important;\n",
-       "  margin-left: 1ex;\n",
+       "  margin-left: 0.5em;\n",
+       "  text-align: center;\n",
        "  /* unfitted */\n",
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-unfitted-level-1);\n",
@@ -446,24 +457,24 @@
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
        "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;polarsprocessor&#x27;,\n",
-       "                 &lt;sgpp.PolarsProcessor object at 0x7efc973a8470&gt;),\n",
+       "                 &lt;sgpp.PolarsProcessor object at 0x7f0bf0b53b00&gt;),\n",
        "                (&#x27;exprprocessor&#x27;,\n",
-       "                 &lt;sgpp.ExprProcessor object at 0x7efc8922fc80&gt;),\n",
+       "                 &lt;sgpp.ExprProcessor object at 0x7f0bf13826c0&gt;),\n",
        "                (&#x27;pandasconverter&#x27;,\n",
-       "                 &lt;sgpp.PandasConverter object at 0x7efc8922cbc0&gt;)])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;Pipeline<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;polarsprocessor&#x27;,\n",
-       "                 &lt;sgpp.PolarsProcessor object at 0x7efc973a8470&gt;),\n",
+       "                 &lt;sgpp.PandasConverter object at 0x7f0bf0bd2270&gt;)])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>Pipeline</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;polarsprocessor&#x27;,\n",
+       "                 &lt;sgpp.PolarsProcessor object at 0x7f0bf0b53b00&gt;),\n",
        "                (&#x27;exprprocessor&#x27;,\n",
-       "                 &lt;sgpp.ExprProcessor object at 0x7efc8922fc80&gt;),\n",
+       "                 &lt;sgpp.ExprProcessor object at 0x7f0bf13826c0&gt;),\n",
        "                (&#x27;pandasconverter&#x27;,\n",
-       "                 &lt;sgpp.PandasConverter object at 0x7efc8922cbc0&gt;)])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">PolarsProcessor</label><div class=\"sk-toggleable__content fitted\"><pre>&lt;sgpp.PolarsProcessor object at 0x7efc973a8470&gt;</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">ExprProcessor</label><div class=\"sk-toggleable__content fitted\"><pre>&lt;sgpp.ExprProcessor object at 0x7efc8922fc80&gt;</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">PandasConverter</label><div class=\"sk-toggleable__content fitted\"><pre>&lt;sgpp.PandasConverter object at 0x7efc8922cbc0&gt;</pre></div> </div></div></div></div></div></div>"
+       "                 &lt;sgpp.PandasConverter object at 0x7f0bf0bd2270&gt;)])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>PolarsProcessor</div></div></label><div class=\"sk-toggleable__content fitted\"><pre>&lt;sgpp.PolarsProcessor object at 0x7f0bf0b53b00&gt;</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>ExprProcessor</div></div></label><div class=\"sk-toggleable__content fitted\"><pre>&lt;sgpp.ExprProcessor object at 0x7f0bf13826c0&gt;</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>PandasConverter</div></div></label><div class=\"sk-toggleable__content fitted\"><pre>&lt;sgpp.PandasConverter object at 0x7f0bf0bd2270&gt;</pre></div> </div></div></div></div></div></div>"
       ],
       "text/plain": [
        "Pipeline(steps=[('polarsprocessor',\n",
-       "                 <sgpp.PolarsProcessor object at 0x7efc973a8470>),\n",
+       "                 <sgpp.PolarsProcessor object at 0x7f0bf0b53b00>),\n",
        "                ('exprprocessor',\n",
-       "                 <sgpp.ExprProcessor object at 0x7efc8922fc80>),\n",
+       "                 <sgpp.ExprProcessor object at 0x7f0bf13826c0>),\n",
        "                ('pandasconverter',\n",
-       "                 <sgpp.PandasConverter object at 0x7efc8922cbc0>)])"
+       "                 <sgpp.PandasConverter object at 0x7f0bf0bd2270>)])"
       ]
      },
      "execution_count": 2,
@@ -535,6 +546,9 @@
     "from sklearn.model_selection import KFold, cross_validate, cross_val_score, ShuffleSplit\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from mlxtend.feature_selection import SequentialFeatureSelector\n",
+    "from sklearn.preprocessing import TargetEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "kf = KFold(5, shuffle = True, random_state = 123)\n",
     "ss = ShuffleSplit(1, train_size = 0.8, random_state = 123)\n",
     "\n",
@@ -583,7 +597,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float32(10.683447)"
+       "10.683446884155273"
       ]
      },
      "execution_count": 5,
@@ -610,7 +624,7 @@
     {
      "data": {
       "text/plain": [
-       "(LinearRegression(), None, ['NAd', 'HP', 'ELm_num', 'GP', 'ELm_sqrt'])"
+       "(LinearRegression(), None, ['ELm_num', 'GP', 'NAd', 'HP', 'ELm_sqrt'])"
       ]
      },
      "execution_count": 6,
@@ -657,8 +671,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import TargetEncoder\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from itertools import combinations\n",
     "\n",
     "X_values = [\n",
@@ -755,7 +767,7 @@
        "  'Guest_Popularity_percentage,Podcast_Name',\n",
        "  'Host_Popularity_percentage,Episode_Title',\n",
        "  'Host_Popularity_percentage,Podcast_Name'],\n",
-       " np.float64(13.014869188581011))"
+       " 13.014869188581011)"
       ]
      },
      "execution_count": 10,
@@ -912,7 +924,7 @@
        "  'Guest_Popularity_percentage,Podcast_Name',\n",
        "  'Host_Popularity_percentage,Episode_Title',\n",
        "  'Publication_Time,Genre,Host_Popularity_percentage'],\n",
-       " np.float64(12.927662660852757))"
+       " 12.927662660852757)"
       ]
      },
      "execution_count": 11,
@@ -930,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "397e1862-13ed-4b71-b228-814ce7202d19",
    "metadata": {},
    "outputs": [
@@ -1189,7 +1201,7 @@
        " 12.890936240392412)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1211,7 @@
     "    'tgt_sel',\n",
     "    lambda :  get_best_combi_target(\n",
     "        [i.split(',') for i in X_lr_best] + \\\n",
-    "        [list(i) for i in combinations(pd.Series([i.split(',') for i in X_lr_best if len(i.split(',')) == 2]).explode().unique(), 3)]\n",
+    "        [list(i) for i in combinations(pd.Series([i.split(',') for i in X_lr_best if len(i.split(',')) == 3]).explode().unique(), 4)]\n",
     "    ), rerun = 1\n",
     ")"
    ]
@@ -1216,12 +1228,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "id": "53dadd18-1753-4bba-a456-3285e65197d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = [\n",
+    "X_values = [\n",
     "    'Episode_Length_minutes', 'Host_Popularity_percentage', 'Guest_Popularity_percentage', 'Number_of_Ads',\n",
     "    'Episode_Sentiment', 'Episode_Title', 'Genre', 'Podcast_Name', 'Publication_Day', 'Publication_Time'\n",
     "]\n",
@@ -1233,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "id": "03617efd-11c3-4b41-af42-dd3413a06c30",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 15,
    "id": "39081a47-e553-47db-9516-64301ac7dadc",
    "metadata": {},
    "outputs": [
@@ -1276,12 +1288,13 @@
        "(['Episode_Length_minutes,Host_Popularity_percentage'], 10.357699324980546)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from itertools import combinations\n",
     "X_lr_best, rmse_best = get_best_combi_resi(\n",
     "    [list(i) for i in combinations(X_values, 1)] + [list(i) for i in combinations(X_values, 2)]\n",
     ")\n",
@@ -1290,8 +1303,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9f56c872-7d71-47e5-ba5e-6ee2c8757a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['Episode_Length_minutes,Host_Popularity_percentage'], 10.357699324980546)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_lr_best, rmse_best = get_best_combi_resi(\n",
+    "    [i.split(',') for i in X_lr_best] + \\\n",
+    "    [list(i) for i in combinations(X_values, 3)]\n",
+    ")\n",
+    "X_lr_best, rmse_best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a40f5e41-699c-473f-9759-ca7540064007",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1313,7 +1351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
