--- a/kaggle/PGS5/PGS5_ep4/3-3.Machine Learning3.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/3-3.Machine Learning3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "d7da7071-cfc6-4a2a-bc1a-6b0e2bf036d9",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n"
+      "3.12.9 (main, Mar 15 2025, 13:36:28) [GCC 13.3.0]\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "cafe2b17-8573-448f-8aff-0078fa2dd1d9",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "a88ba3df-c359-4471-8dfe-cb1d2c75dc8e",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "07f4ece3-0d74-4d7c-971a-20de3be14949",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "7f9a5e1c-fcfd-4619-b5d0-83a17d58227b",
    "metadata": {},
    "outputs": [
@@ -152,6 +152,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d29e45ba-2979-4c33-b9f8-5f4ef0ccbcc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ =sc.cache_result(\n",
+    "    'tgt_enc2', lambda : tge_proc(df_train, df_test), rerun = 0\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "95043240-efd2-43c4-b875-ef6c2307c01c",
    "metadata": {},
@@ -161,51 +173,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "56b39bcc-a2cf-4049-a81c-894bf031d6d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[np.float64(12.80809672753578),\n",
-       " np.float64(12.831797164631581),\n",
-       " np.float64(12.869177151735707),\n",
-       " np.float64(12.89695525439413),\n",
-       " np.float64(12.912815772222732)]"
+       "[12.805628602113751,\n",
+       " 12.831107080031513,\n",
+       " 12.869922126139686,\n",
+       " 12.89564465274633,\n",
+       " 12.911804869939672]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hparams = {\n",
-    "    'X_num': ['GP', 'HP', 'NAd', 'ELm_sqrt', 'ELm_num', 'ELm_na'] + X_tgt\n",
-    "}\n",
-    "rmse_oof = list()\n",
-    "for i, (train_idx, valid_idx) in enumerate(kf.split(df_train[X_all], df_train[target])):\n",
-    "    df_tgt_train, df_tgt_valid = sc.cache_result(\n",
-    "        'kf_sp_{}2'.format(i),\n",
-    "        lambda : tge_proc(df_train.iloc[train_idx], df_train.iloc[valid_idx])\n",
-    "    )\n",
-    "    result = sgml.train(\n",
-    "        dproc.join_and_assign(df_train.iloc[train_idx], df_tgt_train), hparams, config, lr_adapter\n",
-    "    )\n",
-    "    result = result[0]\n",
-    "    if 'preprocessor' in result:\n",
-    "        m = make_pipeline(result['preprocessor'], result['model'])\n",
-    "    else:\n",
-    "        m = result['model']\n",
-    "    rmse_oof.append(\n",
-    "        root_mean_squared_error(\n",
-    "            df_train.iloc[valid_idx][target],\n",
-    "            m.predict(\n",
-    "                dproc.join_and_assign(df_train.iloc[valid_idx], df_tgt_valid)[result['variables']]\n",
-    "            )\n",
+    "def cv_tgt2(hparams, adapter):\n",
+    "    rmse_oof = list()\n",
+    "    prd_oof = list()\n",
+    "    for i, (train_idx, valid_idx) in enumerate(kf.split(df_train[X_all], df_train[target])):\n",
+    "        df_tgt_train, df_tgt_valid = sc.cache_result(\n",
+    "            'kf_sp_{}2'.format(i),\n",
+    "            lambda : tge_proc(df_train.iloc[train_idx], df_train.iloc[valid_idx])\n",
     "        )\n",
-    "    )\n",
+    "        result = sgml.train(\n",
+    "            dproc.join_and_assign(df_train.iloc[train_idx], df_tgt_train.rename(columns = lambda x: x.replace(',', '_'))), hparams, config, adapter\n",
+    "        )\n",
+    "        predictor = sgml.assemble_predictor(**result[0], config = config)\n",
+    "        prd_oof.append(\n",
+    "            predictor(dproc.join_and_assign(df_train.iloc[valid_idx], df_tgt_valid.rename(columns = lambda x: x.replace(',', '_'))))\n",
+    "        )\n",
+    "        rmse_oof.append(\n",
+    "            root_mean_squared_error(df_train.iloc[valid_idx][target], prd_oof[-1])\n",
+    "        )\n",
+    "    return rmse_oof, pd.concat(prd_oof).sort_index()\n",
+    "hparams = {\n",
+    "    'X_num': ['GP', 'HP', 'NAd', 'ELm_sqrt', 'ELm_num', 'ELm_na'] + [i.replace(',', '_') for i in X_tgt]\n",
+    "}\n",
+    "rmse_oof, prd_oof = sc.cache_result(\n",
+    "    'lr2', lambda : cv_tgt2(hparams, lr_adapter)\n",
+    ")\n",
     "rmse_oof"
    ]
   },
@@ -219,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "8598765e-620f-44f2-bbd8-b9e17069f04a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "532fead5eff2428ea859803783f3a337",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "275904e0fd83492f82f1eee88ec19beb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "959e2290d6fe49d998ed232b02c07633",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "0bde16475d554e81b4f5e3fd18a896eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "d9844edc84534d92a151b25c69b1fb74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,6 +304,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[11.883674552343056,\n",
+       " 11.891175999570464,\n",
+       " 11.909504203491974,\n",
+       " 11.974334369606053,\n",
+       " 11.977008561242876]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -300,51 +326,24 @@
     "    'X_num': ['GP', 'HP', 'NAd', 'ELm_num', 'ELm_na'] + [i.replace(',', '_') for i in X_tgt],\n",
     "    'metric': 'rmse'\n",
     "}\n",
-    "rmse_oof = list()\n",
-    "for i, (train_idx, valid_idx) in enumerate(kf.split(df_train[X_all], df_train[target])):\n",
-    "    df_tgt_train, df_tgt_valid = sc.read_result('kf_sp_{}2'.format(i))\n",
-    "    df_tgt_train, df_tgt_valid = df_tgt_train.rename(columns = lambda x: x.replace(',', '_')), df_tgt_valid.rename(columns = lambda x: x.replace(',', '_'))\n",
-    "    result = sgml.train(\n",
-    "        dproc.join_and_assign(df_train.iloc[train_idx], df_tgt_train), hparams, config, lgb_adapter\n",
-    "    )\n",
-    "    result = result[0]\n",
-    "    if 'preprocessor' in result:\n",
-    "        m = make_pipeline(result['preprocessor'], result['model'])\n",
-    "    else:\n",
-    "        m = result['model']\n",
-    "    rmse_oof.append(\n",
-    "        root_mean_squared_error(\n",
-    "            df_train.iloc[valid_idx][target],\n",
-    "            m.predict(\n",
-    "                dproc.join_and_assign(df_train.iloc[valid_idx], df_tgt_valid)[result['variables']]\n",
-    "            )\n",
-    "        )\n",
-    "    )"
+    "rmse_oof, prd_oof = sc.cache_result(\n",
+    "    'lgb2', lambda : cv_tgt2(hparams, lgb_adapter)\n",
+    ")\n",
+    "rmse_oof"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "5ca48926-8ed0-408a-a239-323f743d4547",
+   "execution_count": null,
+   "id": "aa17f0f9-d7e1-45ee-a10f-c6aae4c39df3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[np.float64(11.8728253373632),\n",
-       " np.float64(11.893152483420323),\n",
-       " np.float64(11.898166553175242),\n",
-       " np.float64(11.977559155461316),\n",
-       " np.float64(11.984174012061468)]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rmse_oof"
+    "df_tgt_train, df_tgt_valid = sc.read_result('tgt_enc2')\n",
+    "result = sgml.train(\n",
+    "    dproc.join_and_assign(df_train, df_tgt_train), hparams, config, lr_adapter\n",
+    ")\n",
+    "predictor = sgml.assemble_predictor(**result[0], config = config)"
    ]
   }
  ],
@@ -364,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
