--- a/kaggle/PGS5/PGS5_ep4/3-2.Machine Learning2.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/3-2.Machine Learning2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9ab02c3c-de53-495e-914e-2fdea0ed85e4",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "2d50e258-00b7-4f60-abfe-45a68086d7be",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "44e9e91f-e82b-4ee8-b9ff-b10a3cf3ef7a",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "56a6ea07-b4ad-4622-871b-2c876abca489",
    "metadata": {},
    "outputs": [],
@@ -209,6 +209,27 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "8e4ed623-c42a-43fb-b2b3-f0fa87238a68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import TargetEncoder\n",
+    "def tge_proc(df_train, df_valid):\n",
+    "    X_tgt_var = pd.Series(X_intr2 + X_intr3 + X_intr4).explode().unique().tolist()\n",
+    "    df_train_all, df_valid_all = list(), list()\n",
+    "    for X in tqdm([X_intr2, X_intr3, X_intr4]):\n",
+    "        tge = make_pipeline(\n",
+    "            sgpp.CatCombiner2(X), TargetEncoder()\n",
+    "        ).set_output(transform = 'pandas')\n",
+    "        df_train_all.append(tge.fit_transform(df_train[X_tgt_var], df_train[target]))\n",
+    "        df_valid_all.append(tge.transform(df_valid[X_tgt_var]))\n",
+    "    return pd.concat(df_train_all, axis = 1), pd.concat(df_valid_all, axis = 1)\n",
+    "X_tgt = [','.join(i) for i in X_intr2 + X_intr3 + X_intr4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "6511be1b-d49c-4078-909c-d2b667b48f70",
    "metadata": {},
    "outputs": [
@@ -225,25 +246,39 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import TargetEncoder\n",
-    "def tge_proc(df_train, df_valid):\n",
-    "    X_tgt_var = pd.Series(X_intr2 + X_intr3 + X_intr4).explode().unique().tolist()\n",
-    "    df_train_all, df_valid_all = list(), list()\n",
-    "    for X in tqdm([X_intr2, X_intr3, X_intr4]):\n",
-    "        tge = make_pipeline(\n",
-    "            sgpp.CatCombiner2(X), TargetEncoder()\n",
-    "        ).set_output(transform = 'pandas')\n",
-    "        df_train_all.append(tge.fit_transform(df_train[X_tgt_var], df_train[target]))\n",
-    "        df_valid_all.append(tge.transform(df_valid[X_tgt_var]))\n",
-    "    return pd.concat(df_train_all, axis = 1), pd.concat(df_valid_all, axis = 1)\n",
-    "\n",
     "for i, (train_idx, valid_idx) in enumerate(kf.split(df_train[X_all], df_train[target])):\n",
     "    print(\"generating {} Fold\".format(i))\n",
     "    sc.cache_result(\n",
     "        'kf_sp_{}'.format(i),\n",
     "        lambda : tge_proc(df_train.iloc[train_idx], df_train.iloc[valid_idx]), rerun = 0\n",
-    "    )\n",
-    "X_tgt = [','.join(i) for i in X_intr2 + X_intr3 + X_intr4]"
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ba607a36-71ae-4bf8-9c51-308e8fc4c826",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0bd41372bf9c4d59ad50523c66325994",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = sc.cache_result(\n",
+    "    'tgt_enc', lambda : tge_proc(df_train, df_test), rerun = 0\n",
+    ")"
    ]
   },
   {
@@ -309,7 +344,21 @@
    "id": "eaa4a08e-6bab-4927-95a2-2e57c31fb70b",
    "metadata": {},
    "source": [
-    "# LGB 1"
+    "# LGB 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "eabdcafa-4d66-45db-8bfe-58fdffc1d6a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hparams = {\n",
+    "    'model_params': {'num_leaves': 1024, 'n_estimators': 1500, 'learning_rate': 0.01, 'colsample_bytree': 0.7},\n",
+    "    'X_num': ['GP', 'HP', 'NAd', 'ELm_num', 'ELm_na'] + [i.replace(',', '_') for i in X_tgt],\n",
+    "    'metric': 'rmse'\n",
+    "}"
    ]
   },
   {
@@ -390,11 +439,6 @@
     }
    ],
    "source": [
-    "hparams = {\n",
-    "    'model_params': {'num_leaves': 1024, 'n_estimators': 1500, 'learning_rate': 0.01, 'colsample_bytree': 0.7},\n",
-    "    'X_num': ['GP', 'HP', 'NAd', 'ELm_num', 'ELm_na'] + [i.replace(',', '_') for i in X_tgt],\n",
-    "    'metric': 'rmse'\n",
-    "}\n",
     "rmse_oof = list()\n",
     "for i, (train_idx, valid_idx) in enumerate(kf.split(df_train[X_all], df_train[target])):\n",
     "    df_tgt_train, df_tgt_valid = sc.read_result('kf_sp_{}'.format(i))\n",
@@ -445,8 +489,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3df99af3-5091-4957-8edf-e37644782a87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/1500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_tgt_train, df_tgt_test = sc.read_result('tgt_enc')\n",
+    "result = sc.cache_result(\n",
+    "    \"lgb3\", lambda : sgml.train(\n",
+    "        dproc.join_and_assign(df_train, df_tgt_train.rename(columns = lambda x: x.replace(',', '_'))), hparams, config, lgb_adapter\n",
+    "    )\n",
+    ")\n",
+    "predictor = sgml.assemble_predictor(**result[0], config = config)\n",
+    "prd = predictor(\n",
+    "    dproc.join_and_assign(df_test, df_tgt_test.rename(columns = lambda x: x.replace(',', '_')))\n",
+    ")\n",
+    "prd.rename(target).to_csv('result/submission6.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87bc776b-0da9-4e2a-bda7-bb30fd0f9e56",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -468,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
