--- a/kaggle/PGS5/PGS5_ep4/3-3.Machine Learning3.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/3-3.Machine Learning3.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.9 (main, Mar 15 2025, 13:36:28) [GCC 13.3.0]\n"
+      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n"
      ]
     }
    ],
@@ -111,12 +111,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_tgt_sel, _ = sc.read_result('tgt_sel')"
+    "X_tgt_sel, _ = sc.read_result('tgt_sel')\n",
+    "from sklearn.preprocessing import TargetEncoder\n",
+    "\n",
+    "def tge_proc(df_train, df_valid):\n",
+    "    X_tgt_var = pd.Series(X_tgt_sel).str.split(',').explode().unique().tolist()\n",
+    "    df_train_all, df_valid_all = list(), list()\n",
+    "    tge = make_pipeline(\n",
+    "        sgpp.CatCombiner2(pd.Series(X_tgt_sel).str.split(',').tolist()), TargetEncoder()\n",
+    "    ).set_output(transform = 'pandas')\n",
+    "    return tge.fit_transform(df_train[X_tgt_var], df_train[target]), tge.transform(df_valid[X_tgt_var])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7f9a5e1c-fcfd-4619-b5d0-83a17d58227b",
    "metadata": {},
    "outputs": [
@@ -133,15 +142,6 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import TargetEncoder\n",
-    "def tge_proc(df_train, df_valid):\n",
-    "    X_tgt_var = pd.Series(X_tgt_sel).str.split(',').explode().unique().tolist()\n",
-    "    df_train_all, df_valid_all = list(), list()\n",
-    "    tge = make_pipeline(\n",
-    "        sgpp.CatCombiner2(pd.Series(X_tgt_sel).str.split(',').tolist()), TargetEncoder()\n",
-    "    ).set_output(transform = 'pandas')\n",
-    "    return tge.fit_transform(df_train[X_tgt_var], df_train[target]), tge.transform(df_valid[X_tgt_var])\n",
-    "\n",
     "for i, (train_idx, valid_idx) in enumerate(kf.split(df_train[X_all], df_train[target])):\n",
     "    print(\"generating {} Fold\".format(i))\n",
     "    sc.cache_result(\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d29e45ba-2979-4c33-b9f8-5f4ef0ccbcc3",
    "metadata": {},
    "outputs": [],
@@ -164,11 +164,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3d20186d-c1df-499d-b072-c64577b85713",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cv_tgt2(hparams, adapter):\n",
+    "    rmse_oof = list()\n",
+    "    prd_oof = list()\n",
+    "    for i, (train_idx, valid_idx) in enumerate(kf.split(df_train[X_all], df_train[target])):\n",
+    "        df_tgt_train, df_tgt_valid = sc.cache_result(\n",
+    "            'kf_sp_{}2'.format(i),\n",
+    "            lambda : tge_proc(df_train.iloc[train_idx], df_train.iloc[valid_idx])\n",
+    "        )\n",
+    "        result = sgml.train(\n",
+    "            dproc.join_and_assign(df_train.iloc[train_idx], df_tgt_train.rename(columns = lambda x: x.replace(',', '_'))), hparams, config, adapter\n",
+    "        )\n",
+    "        predictor = sgml.assemble_predictor(**result[0], config = config)\n",
+    "        prd_oof.append(\n",
+    "            predictor(dproc.join_and_assign(df_train.iloc[valid_idx], df_tgt_valid.rename(columns = lambda x: x.replace(',', '_'))))\n",
+    "        )\n",
+    "        rmse_oof.append(\n",
+    "            root_mean_squared_error(df_train.iloc[valid_idx][target], prd_oof[-1])\n",
+    "        )\n",
+    "    return rmse_oof, pd.concat(prd_oof).sort_index()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "95043240-efd2-43c4-b875-ef6c2307c01c",
    "metadata": {},
    "source": [
     "# Linear Regression 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "285929f2-02bf-4d6b-934a-572d6396ff24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hparams = {\n",
+    "    'X_num': ['GP', 'HP', 'NAd', 'ELm_sqrt', 'ELm_num', 'ELm_na'] + [i.replace(',', '_') for i in X_tgt]\n",
+    "}"
    ]
   },
   {
@@ -193,32 +233,30 @@
     }
    ],
    "source": [
-    "def cv_tgt2(hparams, adapter):\n",
-    "    rmse_oof = list()\n",
-    "    prd_oof = list()\n",
-    "    for i, (train_idx, valid_idx) in enumerate(kf.split(df_train[X_all], df_train[target])):\n",
-    "        df_tgt_train, df_tgt_valid = sc.cache_result(\n",
-    "            'kf_sp_{}2'.format(i),\n",
-    "            lambda : tge_proc(df_train.iloc[train_idx], df_train.iloc[valid_idx])\n",
-    "        )\n",
-    "        result = sgml.train(\n",
-    "            dproc.join_and_assign(df_train.iloc[train_idx], df_tgt_train.rename(columns = lambda x: x.replace(',', '_'))), hparams, config, adapter\n",
-    "        )\n",
-    "        predictor = sgml.assemble_predictor(**result[0], config = config)\n",
-    "        prd_oof.append(\n",
-    "            predictor(dproc.join_and_assign(df_train.iloc[valid_idx], df_tgt_valid.rename(columns = lambda x: x.replace(',', '_'))))\n",
-    "        )\n",
-    "        rmse_oof.append(\n",
-    "            root_mean_squared_error(df_train.iloc[valid_idx][target], prd_oof[-1])\n",
-    "        )\n",
-    "    return rmse_oof, pd.concat(prd_oof).sort_index()\n",
-    "hparams = {\n",
-    "    'X_num': ['GP', 'HP', 'NAd', 'ELm_sqrt', 'ELm_num', 'ELm_na'] + [i.replace(',', '_') for i in X_tgt]\n",
-    "}\n",
     "rmse_oof, prd_oof = sc.cache_result(\n",
     "    'lr2', lambda : cv_tgt2(hparams, lr_adapter)\n",
     ")\n",
     "rmse_oof"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "d2a158f2-636a-402d-9fec-ae818f9d0e65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tgt_train, df_tgt_test = sc.read_result('tgt_enc2')\n",
+    "result = sc.cache_result(\n",
+    "    \"lr2_m\", lambda : sgml.train(\n",
+    "        dproc.join_and_assign(df_train, df_tgt_train.rename(columns = lambda x: x.replace(',', '_'))), hparams, config, lr_adapter\n",
+    "    )\n",
+    ")\n",
+    "predictor = sgml.assemble_predictor(**result[0], config = config)\n",
+    "prd = predictor(\n",
+    "    dproc.join_and_assign(df_test, df_tgt_test.rename(columns = lambda x: x.replace(',', '_')))\n",
+    ")\n",
+    "prd.rename(target).to_csv('result/submission7.csv')"
    ]
   },
   {
@@ -231,120 +269,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "8598765e-620f-44f2-bbd8-b9e17069f04a",
+   "execution_count": 9,
+   "id": "308c768d-8aa7-4149-8725-7d6456734679",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "532fead5eff2428ea859803783f3a337",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Round:   0%|          | 0/1500 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "275904e0fd83492f82f1eee88ec19beb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Round:   0%|          | 0/1500 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "959e2290d6fe49d998ed232b02c07633",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Round:   0%|          | 0/1500 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bde16475d554e81b4f5e3fd18a896eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Round:   0%|          | 0/1500 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9844edc84534d92a151b25c69b1fb74",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Round:   0%|          | 0/1500 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[11.883674552343056,\n",
-       " 11.891175999570464,\n",
-       " 11.909504203491974,\n",
-       " 11.974334369606053,\n",
-       " 11.977008561242876]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hparams = {\n",
     "    'model_params': {'num_leaves': 1024, 'n_estimators': 1500, 'learning_rate': 0.01, 'colsample_bytree': 0.7},\n",
     "    'X_num': ['GP', 'HP', 'NAd', 'ELm_num', 'ELm_na'] + [i.replace(',', '_') for i in X_tgt],\n",
     "    'metric': 'rmse'\n",
-    "}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8598765e-620f-44f2-bbd8-b9e17069f04a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rmse_oof, prd_oof = sc.cache_result(\n",
-    "    'lgb2', lambda : cv_tgt2(hparams, lgb_adapter)\n",
+    "    'cv_lgb2', lambda : cv_tgt2(hparams, lgb_adapter)\n",
     ")\n",
     "rmse_oof"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aa17f0f9-d7e1-45ee-a10f-c6aae4c39df3",
+   "execution_count": 20,
+   "id": "f28b1425-2df3-4e86-ae94-0e43cb634929",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_tgt_train, df_tgt_valid = sc.read_result('tgt_enc2')\n",
-    "result = sgml.train(\n",
-    "    dproc.join_and_assign(df_train, df_tgt_train), hparams, config, lr_adapter\n",
+    "df_tgt_train, df_tgt_test = sc.read_result('tgt_enc2')\n",
+    "result = sc.cache_result(\n",
+    "    \"lgb2\", lambda : sgml.train(\n",
+    "        dproc.join_and_assign(df_train, df_tgt_train.rename(columns = lambda x: x.replace(',', '_'))), hparams, config, lgb_adapter\n",
+    "    )\n",
     ")\n",
-    "predictor = sgml.assemble_predictor(**result[0], config = config)"
+    "predictor = sgml.assemble_predictor(**result[0], config = config)\n",
+    "prd = predictor(\n",
+    "    dproc.join_and_assign(df_test, df_tgt_test.rename(columns = lambda x: x.replace(',', '_')))\n",
+    ")\n",
+    "prd.rename(target).to_csv('result/submission5.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fad7ad8d-4358-40e2-8e16-09d8980cc4b2",
+   "metadata": {},
+   "source": [
+    "LR2, LGB2 모두 교차 검증의 성능과 Public Score와 차이가 상당히 납니다. 왜 그런지... 디버깅이 필요해 보입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d18af912-6463-40d8-8c43-00c54f9c15a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -363,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
