--- a/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
@@ -18,7 +18,10 @@
     "|Submission1.csv|LR_0|1-4 Target Encoding2.ipynb|4-fold CV, RMSE: 12.9223|13.46369|분리했을 때의 성능 집계에 신경을 써야함.<br/> 또한 결측이 있을 경우와 없을 때 분리에 큰 의미가 없음|\n",
     "|Submission2.csv|XGB1|2 Feature Engineering.ipynb|5-fold CV, RMSE: 12.0511474609375|11.96567||\n",
     "|Submission3.csv|LGB1|2 Feature Engineering.ipynb|5-fold CV, RMSE: 12.061242868841823|11.98543||\n",
-    "|Submission4.csv|Ensemble|2 Feature Engineering.ipynb|5-fold CV, RMSE: 12.043910934372109|11.96283|XGB1 + LGB1|"
+    "|Submission4.csv|Ensemble|2 Feature Engineering.ipynb|5-fold CV, RMSE: 12.043910934372109|11.96283|XGB1 + LGB1|\n",
+    "|Submission5.csv|LGB2|3 Machine Learning3.ipynb|5-fold CV, RMSE: 11.953910934372109|14.40758||\n",
+    "|Submission6.csv|LGB3|3 Machine Learning2.ipynb|5-fold CV, RMSE: 11.951568837831974|15.38512||\n",
+    "|Submission7.csv|LR2|3 Machine Learning3.ipynb|5-fold CV, RMSE: 12.85|13.81691||"
    ]
   },
   {
@@ -94,7 +97,9 @@
    "id": "a6270033-39f1-4c31-89be-a4a7575f057d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission5.csv -m \"5\""
+   ]
   }
  ],
  "metadata": {
@@ -113,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
