--- a/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
@@ -21,7 +21,12 @@
     "|Submission4.csv|Ensemble|2 Feature Engineering.ipynb|5-fold CV, RMSE: 12.043910934372109|11.96283|XGB1 + LGB1|\n",
     "|Submission5.csv|LGB2|3 Machine Learning3.ipynb|5-fold CV, RMSE: 11.953910934372109|14.40758||\n",
     "|Submission6.csv|LGB3|3 Machine Learning2.ipynb|5-fold CV, RMSE: 11.951568837831974|15.38512||\n",
-    "|Submission7.csv|LR2|3 Machine Learning3.ipynb|5-fold CV, RMSE: 12.85|13.81691||"
+    "|Submission7.csv|LR2|3 Machine Learning3.ipynb|5-fold CV, RMSE: 12.85|13.81691||\n",
+    "|submission8.csv|LR3|3 Machine Learning3-2.ipynb|5-fold CV, RMSE: 12.86|14.09183||\n",
+    "|submission9.csv|LR3_2|3 Machine Learning3-2.ipynb|5-fold CV, RMSE: 12.884|14.12674||\n",
+    "|submission7_2.csv|LR3_2|3 Machine Learning3.ipynb|5-fold CV, RMSE: 12.85|12.879|기존 루틴의 문제를 찾아 냈습니다: Train과 Test\n",
+    "|Submission4.csv|Ensemble|3 Machine Learning3-3.ipynb|5-fold CV, RMSE: 11.918|11.85663|XGB2 + LGB2|\n",
+    "에서 ELm과 GP의 결측치를 각각의 평균으로 대치했던 것이 문제였습니다.|"
    ]
   },
   {
@@ -100,6 +105,109 @@
    "source": [
     "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission5.csv -m \"5\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "56215938-207b-4a70-8a03-1cc3f49d15a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████| 6.01M/6.01M [00:02<00:00, 2.58MB/s]\n",
+      "Successfully submitted to Predict Podcast Listening Time"
+     ]
+    }
+   ],
+   "source": [
+    "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission8.csv -m \"8\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b40809f4-3388-4b86-8f73-28a4e1edda80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████| 6.01M/6.01M [00:03<00:00, 1.71MB/s]\n",
+      "Successfully submitted to Predict Podcast Listening Time"
+     ]
+    }
+   ],
+   "source": [
+    "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission9.csv -m \"9\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e1aa68c5-aaae-4381-82ce-8dd7b239509c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████| 6.02M/6.02M [00:02<00:00, 2.65MB/s]\n",
+      "Successfully submitted to Predict Podcast Listening Time"
+     ]
+    }
+   ],
+   "source": [
+    "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission7_2.csv -m \"7\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4b5e20e5-a163-4ccd-8b8a-218386dcc5b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████| 6.02M/6.02M [00:03<00:00, 1.79MB/s]\n",
+      "Successfully submitted to Predict Podcast Listening Time"
+     ]
+    }
+   ],
+   "source": [
+    "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission5_2.csv -m \"5_2\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "12757e97-9813-4f79-b534-8328ee1d0129",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████| 6.01M/6.01M [00:02<00:00, 2.50MB/s]\n",
+      "Successfully submitted to Predict Podcast Listening Time"
+     ]
+    }
+   ],
+   "source": [
+    "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission10.csv -m \"10\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8118605b-66b3-4729-9d52-4ece3671a3af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -118,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
